name:                autorun
version:             0.1.0.0
synopsis:            Automatically execute source code in multiple languages, with docker.
homepage:            https://github.com/yamadapc/autorun
license:             GPL-2
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable autorun
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.6 && <4.7
                     , containers >= 0.5 && < 0.6
                     , filepath >= 1.3 && < 1.4
                     , process >= 1.2 && < 1.3
                     , directory >= 1.2 && < 1.3
  default-language:    Haskell2010

test-suite autorun-spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      src
                     , test
  build-depends:       base >=4.6 && <4.7
                     , hspec >= 1.11.4 && < 1.12
                     , containers >= 0.5 && < 0.6
                     , filepath >= 1.3 && < 1.4
                     , process >= 1.2 && < 1.3
                     , directory >= 1.2 && < 1.3
  default-language:    Haskell2010
